added missing poll when on mobile

--- a/static/css/front_page.css
+++ b/static/css/front_page.css
@@ -38,6 +38,7 @@
         "office"
         "latest-nablad"
         "latest-podcast"
+        "poll"
         "main-article"
         "more-news-1"
         "more-news-2"
