--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -12,7 +12,7 @@
 
 {% block main-blank %}
     {% addtoblock "css" %}
-        <link rel="stylesheet" href="{% static "css/front_page.css" %}">
+        <link rel="stylesheet" href="{% static "css/front_page.css" %}?version=1.1">
     {% endaddtoblock %}
     <div class="maingrid-container{% if not newuser_message %}-authenticated{% endif %}">
         <!--main grid container open tag-->
