--- a/templates/base.html
+++ b/templates/base.html
@@ -255,9 +255,8 @@
                             <a class="dropdown-item" href="/referater/{% now "Y" %}">Styremøtereferater</a>
                             <a class="dropdown-item" href="{% url "albums" %}">Bildealbum</a>
                             <a class="dropdown-item" href="{% url "games_list" %}">Spill</a>
-                            <a class="dropdown-item" href="{% url "wiki:root" %}">NablaWiki</a>
                             <a class="dropdown-item" href="{% url "news_list" %}">Nyheter</a>
-                            <a class="dropdown-item" href="{% url "blog" %}">Blogg</a>
+                            <!-- <a class="dropdown-item" href="{% url "blog" %}">Blogg</a> -->
                             <a class="dropdown-item" href="{% url "advent_calendar" "2021" %}">Joulekalender 2021</a>
 
                     <li class="nav-item mr-1 dropdown ">
@@ -267,15 +266,9 @@
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown1">
                             {# Faste lenker om Nabla #}
                             <a class="dropdown-item" href="/om-nabla/">Generelt om Nabla</a>
-                            <a class="dropdown-item" href="/komite/om/styret/">Styret</a>
-                            <a class="dropdown-item" href="/komite/komiteer">Undergrupper</a>
-                            <a class="dropdown-item" href="/wiki/lovverk/nablas-lover/">Nablas lover</a>
-                            <a class="dropdown-item" href="/wiki/lovverk/nablas-forskrifter/">Nablas forskrifter</a>
                             <a class="dropdown-item" href="https://nabla.no/om/forretningsorden/">Nablas forretningsorden</a>
-                            <a class="dropdown-item" href="/om/kompendier/">Kompendier</a>
-                            <a class="dropdown-item" href="/om/Kontortider/">Kontortider</a>
-                            <a class="dropdown-item" href="/om/nablas-fond/">Nablas fond</a>
-                            <a class="dropdown-item" href="/om/stillingsbeskrivelser/">Stillingsbeskrivelser</a>
+                            <a class="dropdown-item" href="/shop/">Kompendier</a>
+                            <a class="dropdown-item" href="{% url "wiki:root" %}">NablaWiki</a>
                             <a class="dropdown-item" href="/om/tillitsvalgte/">Tillitsvalgte</a>
                             <a class="dropdown-item" href="/nystudent/">For nye studenter</a>
 
@@ -308,11 +301,11 @@
 {#                </form>#}
                 <ul class="nav navbar-nav ">
                     {% if request.user.is_authenticated %}
-                    <li class="nav-item">
-                        <a href="{% url 'nablashop:order-summary' %}" class="nav-link waves-effect">
-                            <span class="badge red z-depth-1 mr-1"> {{ request.user|cart_item_count }} </span>
-                            <i class="fas fa-shopping-cart"></i>
-                            <span class="clearfix d-none d-sm-inline-block"> Handlevogn </span>
+                    <!-- <li class="nav-item"> -->
+                        <!-- <a href="{% url 'nablashop:order-summary' %}" class="nav-link waves-effect"> -->
+                            <!-- <span class="badge red z-depth-1 mr-1"> {{ request.user|cart_item_count }} </span> -->
+                            <!-- <i class="fas fa-shopping-cart"></i> -->
+                            <!-- <span class="clearfix d-none d-sm-inline-block"> Handlevogn </span> -->
                         </a>
                     </li>
                     {% endif %}
