--- a/nablapps/officeCalendar/templates/officeCalendar/includes/list.html
+++ b/nablapps/officeCalendar/templates/officeCalendar/includes/list.html
@@ -46,17 +46,17 @@ office_events is a dictionary with weekday as key and a list of events as value
         </style>
     {% endaddtoblock %}
 
-    <div class="h-100 card card-body-overline boder border-secondary" style="word-wrap: normal">
-        <table id="office_calendar">
+    <div class="card flex-grow-1 card-body-overline " style="border-color:var(--nabla-blue-alt);word-wrap: normal">
+        <table id="office_calendar" >
             <col width="20%">
             <col width="55%">
             <col width="25%">
-            <tr>
-                <th colspan="3" class="text-center card-img-top pt-3 pb-2 bg-secondary no_border">
-                    <h4 class="text-light">Kontoret denne uka</h4>
-                </th>
-
-            </tr>
+{#            <tr>#}
+{#                <th colspan="3" class="text-center card-img-top pt-3 pb-2 bg-secondary no_border">#}
+{#                    <h4 class="text-light">Kontoret denne uka</h4>#}
+{#                </th>#}
+{##}
+{#            </tr>#}
             {% for event in office_events %}
                 {% ifchanged event.start_time.date|date:"w" %}
                     <tr>
