--- a/static/css/front_page.css
+++ b/static/css/front_page.css
@@ -1,13 +1,13 @@
 .maingrid-container {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-auto-columns: minmax(0, 1fr);
     grid-gap: 15px;
     align-items: stretch;
     grid-template-areas:
         "main-article main-article welcome"
-        "upcoming-events1 upcoming-events2 office"
-        "more-news-1      more-news-2       social"
+        "upcoming-events-1 upcoming-events-2 office"
         "latest-nablad    latest-podcast   poll"
+        "more-news-1      more-news-2       social"
         "more-news-3      more-news-4      more-news-5"
         "more-news-btn    more-news-btn    more-news-btn"
         "sponsors         sponsors         suggestions";
@@ -15,14 +15,15 @@
 
 .maingrid-container-authenticated {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-auto-columns: minmax(0, 1fr);
     grid-gap: 15px;
     align-items: stretch;
     grid-template-areas:
         "main-article main-article main-article"
-        "upcoming-events1 upcoming-events2 office"
-       " more-news-1   more-news-2  social"
+        /*"title-a        title-b                title-o"*/
+        "upcoming-events-1 upcoming-events-2 office"
         "latest-podcast  latest-nablad    poll"
+        "more-news-1   more-news-2  social"
         "more-news-3     more-news-4    more-news-5"
         "more-news-btn   more-news-btn   more-news-btn"
         "sponsors        sponsors        suggestions";
@@ -33,8 +34,8 @@
         grid-template-columns: 1fr;
         grid-template-areas:
         "welcome"
-        "upcoming-events1"
-        "upcoming-events2"
+        "upcoming-events-1"
+        "upcoming-events-2"
         "office"
         "latest-nablad"
         "latest-podcast"
@@ -50,8 +51,8 @@
     .maingrid-container-authenticated {
         grid-template-columns: 1fr;
         grid-template-areas:
-        "upcoming-events1"
-        "upcoming-events2"
+        "upcoming-events-1"
+        "upcoming-events-2"
         "office"
         "poll"
         "latest-nablad"
@@ -162,10 +163,17 @@
     grid-area: suggestions;
 }
 
-.poll.card-body {
-    height: 100%;
-}
-
 .nabla-media-img {
     height: 365px;
 }
+
+.nabla-frontpage-header {
+    color: var(--nabla-blue-alt);
+}
+
+h5.nabla-frontpage-header {
+    padding-left: 0.25rem;
+    padding-top: .5rem;
+    margin-bottom: 0.25rem;
+}
+
