update css on browsers

--- a/templates/base.html
+++ b/templates/base.html
@@ -109,7 +109,7 @@
         <link rel="stylesheet" href="{% static "@fortawesome/fontawesome-free/css/brands.min.css" %}">
         <link rel="stylesheet" href="{% static "@fortawesome/fontawesome-free/css/solid.min.css" %}">
 
-        <link href="{% static "css/default.css" %}" rel="stylesheet">
+        <link href="{% static "css/default.css" %}?version=1" rel="stylesheet">
 
         {% if custom_color %}
         <style>
