--- a/templates/includes/upcoming_events.html
+++ b/templates/includes/upcoming_events.html
@@ -10,7 +10,7 @@
     </h5>
     <div class="card flex-grow-1 {{ margin|default:"mb-0" }}" style="border-color: var(--nabla-blue-alt)">
         <img alt=""
-             class="card-img-top w-100"
+             class="card-img-top"
                 {% if upcoming.first.picture and upcoming.first.cropping %}
              src="{% thumbnail upcoming.first.picture 770x300 box=upcoming.first.cropping upscale=True detail=True quality=95 %}"
                 {% elif upcoming.first.picture %}
